# mlflow-observability-agent-evals

./: README.md  agent_eval.py  edd_mlflow_langchain.ipynb  pyproject.toml  rag_eval.py
.deepeval/: .deepeval_telemetry.txt
presentation/: agent_evals_presentation.tsx
presentation/slides/: index.html  package-lock.json  package.json
presentation/slides/public/: new-toy.avif
presentation/slides/src/: App.css  App.jsx  SlidePresentation.jsx
